k8s/oracle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle
  namespace: airport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oracle
  template:
    metadata:
      labels:
        app: oracle
    spec:
      containers:
        - name: oracle
          image: gvenzl/oracle-free:23-slim
          ports:
            - containerPort: 1521
          volumeMounts:
            - name: oracle-data
              mountPath: /opt/oracle/oradata
          readinessProbe:
            exec: { command: ["healthcheck.sh"] }
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 20
          livenessProbe:
            exec: { command: ["healthcheck.sh"] }
            initialDelaySeconds: 180
            periodSeconds: 30
      volumes:
        - name: oracle-data
          persistentVolumeClaim:
            claimName: oracle-data
